--- a/react_basic/02_虚拟dom两种创建方式/使用jsx创建虚拟dom.html
+++ b/react_basic/02_虚拟dom两种创建方式/使用jsx创建虚拟dom.html
@@ -15,7 +15,7 @@
   <script src="../js/babel.min.js"></script>
 
   <script type="text/babel">
-    const VDOM = <h1>Hello,React</h1>
+    const VDOM = <h1 id="title"><span>Hello,React</span></h1>
     ReactDOM.render(VDOM,document.getElementById('test'))
   </script>
 </body>
