--- a/react_basic/02_虚拟dom两种创建方式/使用js创建虚拟dom.html
+++ b/react_basic/02_虚拟dom两种创建方式/使用js创建虚拟dom.html
@@ -12,10 +12,12 @@
   </div>
   <script src="../js/react.development.js"></script>
   <script src="../js/react-dom.development.js"></script>
-  <script src="../js/babel.min.js"></script>
 
-  <script type="text/babel">
-    const VDOM = <h1>Hello,React</h1>
+
+
+  <script type="text/javascript">
+    const VDOM1 = React.createElement('span',{id:'span'},'Hello,React')
+    const VDOM = React.createElement('h1',{id:'title',class:'active'},VDOM1)
     ReactDOM.render(VDOM,document.getElementById('test'))
   </script>
 </body>
