--- a/react_staging/public/index.html
+++ b/react_staging/public/index.html
@@ -5,8 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
   <title>Document</title>
+  <style>
+    .atguigu{
+      color:orange !important;
+    }
+  </style>
 </head>
 <body>
   <div id="root">
